# bro

./: .gitignore  CLAUDE.md  LICENSE.md  Procfile.dev  README.md  Taskfile.yml  app.go  ecosystem.config.cjs  egress-config.yaml  egress-config.yaml.example  go.mod  go.sum  justfile  livekit.yaml  main.go  message.go  models.json  pyproject.toml  system_prompt.go  tool.go
.github/workflows/: deploy-agent.yml
.specify/memory/: constitution.md
agent/: .env.example  chat_agent.py  constants.py  dimaist_cli.py  main.py  pyproject.toml  repl.py  requirements.txt  result.py  settings.py  task_agent.py  transcribe_agent.py  transcriber.py  voice_agent.py
agent/notes/: basidian_agent.py
agent/task/: dimaist_cli.py  task_agent.py
agent/tests/: test_dimaist_cli.py  test_task_agent.py
agent/teststand/: __init__.py  __main__.py  app.py  logging.py  models.py  widgets.py
ai/: .gitignore  config.py  graph.py  llm_logging.py  logging_config.py  models.py  models_config.py  pyproject.toml  search.py  server.py
ai/frontend/: index.html  package-lock.json  vite.config.js
ai/frontend/src/: App.svelte  app.css
ai/frontend/src/lib/: Chat.svelte  TTS.svelte  logger.js
ai/tests/: conftest.py  test_graph.py  test_integration.py  test_models.py  test_search.py
app/: app.go  commands.go  message.go  pubspec.yaml  system_prompt.go
app/android/: build.gradle.kts
app/android/app/: build.gradle.kts
app/lib/: main.dart  main_wear.dart
app/lib/constants/: livekit_constants.dart
app/lib/models/: chat_message.dart  models_config.dart  recording.dart
app/lib/pages/: chat_page.dart  home_page.dart  wear_settings_page.dart  wear_voice_page.dart
app/lib/providers/: chat_provider.dart  livekit_providers.dart  settings_provider.dart  storage_providers.dart
app/lib/services/: assistant_service.dart  egress_service.dart  livekit_service.dart  settings_service.dart  storage_service.dart  token_service.dart  waveform_service.dart
app/lib/theme/: theme.dart  tokens.dart
app/lib/widgets/: app_sidebar.dart  connection_indicator.dart  live_transcript.dart  record_button.dart  recording_indicator.dart  settings_sheet.dart  waveform_widget.dart
app/linux/flutter/: generated_plugins.cmake
arch/specs/023-riverpod-migration-for-chat-home-and-wear-pages/: plan.md
arch/specs/025-switch-to-ai-dimalip-in-provider/: plan.md
config/: config.go  history.go  session.go  stats.go
desktop/: .gitignore  pubspec.yaml
desktop/lib/: main.dart
desktop/lib/constants/: livekit_constants.dart
desktop/lib/models/: models_config.dart  recording.dart
desktop/lib/pages/: chat_page.dart  home_page.dart
desktop/lib/services/: egress_service.dart  livekit_service.dart  storage_service.dart  token_service.dart
desktop/lib/theme/: theme.dart  tokens.dart
desktop/lib/widgets/: app_sidebar.dart  record_button.dart  recording_list.dart  recording_tile.dart  stt_provider_selector.dart  waveform_widget.dart
desktop/linux/flutter/: generated_plugin_registrant.cc
e2e/scroll/: config.json5  main.go
e2e/size/: .gitignore  config.json5  main.go
environment/: environment.go
openrouter/: client.go  client_test.go  environment.go  message.go
phone/: pubspec.yaml
phone/android/: settings.gradle.kts
phone/android/app/: build.gradle.kts
phone/lib/: main.dart
phone/lib/app/: app.dart  theme.dart  tokens.dart
scripts/: agent.sh  app.sh  egress.sh  redis.sh  server.sh
shared/opus/: build.gradle
specs/: IMPLEMENTATION.md
specs/001-agent-intent-classification/: spec.md
specs/001-agent-intent-classification/checklists/: requirements.md
specs/002-add-basidian-notes-agent/: plan.md
specs/002-deepgram-cost-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-deepgram-cost-optimization/checklists/: requirements.md
specs/002-deepgram-cost-optimization/contracts/: vad-metrics.json  vad-notifications.json
specs/003-python-type-safety/: plan.md  quickstart.md  research.md  spec.md
specs/003-python-type-safety/checklists/: requirements.md
specs/004-dimaist-cli-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-dimaist-cli-integration/checklists/: requirements.md
specs/004-dimaist-cli-integration/contracts/: task-agent-interface.md
specs/005-agent-test-repl/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-multi-llm-provider-support/: plan.md
specs/008-textual-test-stand-tui/: plan.md  spec.md
specs/010-standardize-llm-model-list/: plan.md  spec.md
specs/012-decouple-text-from-voice-messages/: plan.md  spec.md
specs/012-merge-phone-desktop-apps/: plan.md  spec.md
specs/014-wearos-livekit-voice/: plan.md  spec.md
specs/015-unify-voice-text-input-path/: plan.md
specs/017-persistent-task-agent-retry/: plan.md
specs/018-json-response-metadata/: plan.md  spec.md
specs/019-agent-selector-settings/: plan.md
tools/: interface.go
tools/bash/: prompt.go  tool.go  tool_test.go
tools/fileedit/: prompt.go  tool.go  tool_test.go
tools/filefinder/: prompt.go  tool.go  tool_test.go
tools/grep/: prompt.go  tool.go  tool_test.go
tools/readfile/: prompt.go  tool.go  tool_test.go
wear/: README.md  pubspec.yaml
wear/android/: settings.gradle.kts
wear/lib/: main.dart
wear/test/: widget_test.dart
(+87 files in other folders)
