[project]
name = "bro"
version = "0.1.0"
description = "Voice assistant with task management"
requires-python = ">=3.11"
dependencies = [
    # Agent dependencies
    "livekit-agents>=1.0.0",
    "livekit-plugins-silero",
    "livekit-plugins-deepgram",
    "livekit-plugins-elevenlabs",
    "livekit-plugins-openai",
    "livekit-plugins-turn-detector",
    # AI server dependencies
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    # Shared dependencies
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.20,<0.22",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "edge-tts>=7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "B", "I", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv", "agent/.venv", "ai/.venv", "**/tests"]
