[project]
name = "bro"
version = "0.1.0"
description = "Voice assistant with task management"
requires-python = ">=3.12"
dependencies = [
    # Agent dependencies
    "livekit-agents>=1.0.0",
    "livekit-plugins-silero",
    "livekit-plugins-deepgram",
    "livekit-plugins-elevenlabs",
    "livekit-plugins-openai",
    "livekit-plugins-turn-detector",
    # Shared dependencies
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    # Test stand TUI
    "textual>=0.50.0",
    "aiofiles>=24.0.0",
    # AI logic (editable)
    "my-agents",
]

[tool.uv.sources]
my-agents = { path = "../my-agents", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "B", "I", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [".venv", "agent/.venv", "**/tests"]
