[project]
name = "bro-agent"
version = "0.1.0"
description = "LiveKit Voice Agent for Bro"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.0.0",
    "livekit-plugins-silero",
    "livekit-plugins-deepgram",
    "livekit-plugins-elevenlabs",
    "livekit-plugins-openai",
    "livekit-plugins-turn-detector",
    "python-dotenv",
]
