[project]
name = "bro-agent"
version = "0.1.0"
description = "LiveKit Voice Agent for Bro"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.0.0",
    "livekit-plugins-silero",
    "livekit-plugins-deepgram",
    "livekit-plugins-elevenlabs",
    "livekit-plugins-openai",
    "livekit-plugins-turn-detector",
    "python-dotenv",
    "langgraph",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1",
]

# Commands:
#   uv run ruff check .        - lint
#   uv run ruff check . --fix  - auto-fix
#   uv run ruff format .       - format
#   uv run ty check .          - typecheck

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "B", "I", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv"]
