[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.20,<0.22",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.0",
    "edge-tts>=7.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
